[gd_scene load_steps=3 format=3 uid="uid://da1soluu1j1g2"]

[ext_resource type="Script" path="res://scripts/database_controller.gd" id="1_cikoh"]

[sub_resource type="LabelSettings" id="LabelSettings_2f7yd"]
font_size = 22

[node name="DatabaseController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cikoh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainWordLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Word:"
label_settings = SubResource("LabelSettings_2f7yd")

[node name="MainWordText" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TransWordLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Translation:"
label_settings = SubResource("LabelSettings_2f7yd")

[node name="TransWordText" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateTableButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Create Table"

[node name="DeleteTableButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3" groups=["invisible_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Delete Table"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddRowButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4" groups=["invisible_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Add Row"

[node name="DeleteRowButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4" groups=["invisible_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Delete Row"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EditTransWordButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5" groups=["invisible_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Edit Translation"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 10

[node name="GoBackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Go Back"

[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer3/CreateTableButton" to="." method="_on_create_table_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer3/DeleteTableButton" to="." method="_on_delete_table_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer4/AddRowButton" to="." method="_on_add_row_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer4/DeleteRowButton" to="." method="_on_delete_row_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer5/EditTransWordButton" to="." method="_on_edit_trans_word_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer6/GoBackButton" to="." method="_on_go_back_button_button_up"]
